<resources>
    <string name="app_name">Home Fit</string>
    <string name="title_home">Home</string>
    <string name="title_workout">Workout</string>
    <string name="title_diet">Diet</string>
    <string name="title_profile">Me</string>
    <string name="company">Designed and Developed by Waseem Attar</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alexander Pierce</string>
    <string name="nav_header_subtitle">alexander@homefit.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_bmi">BMI</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_plans">Plans</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="subscription_title">Title</string>
    <string name="subscription_amount">Amount</string>
    <string name="subscription_discount">Discount</string>
    <string name="menu_mysubscription">My Subscription</string>
    <string name="title_pt">PT</string>
    <string name="title_live">Live</string>
    <string name="menu_workoutlibrary">Workouts Library</string>
    <string name="menu_myactivity">My Activity Today</string>
    <string name="menu_login">Login</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="rupee">\u20B9</string>
</resources>